# data-structures-and-algorithms-python

challenges/ch-01/: array-reverse-code.py  readme.md
challenges/ch-02/: readme.md  shift-Array.py
challenges/ch-03/: array-binary-search.py  readme.md
challenges/ch-04/: matrix_summation.py
challenges/ch-08-zipll/zip-ll/zip-ll/: README.md  pyproject.toml
challenges/ch-09/palindrome-ch/: pyproject.toml
challenges/ch-09/palindrome-ch/palindrome_ch/: palindrome_ch.py
challenges/ch-09/palindrome-ch/tests/: test_palindrome_ch.py
challenges/ch-10-stack/stack-queue/: README.md  pyproject.toml
challenges/ch-11/stack-queue-pseudo/: README.md  pyproject.toml
challenges/ch-12/animal-shelter/: README.md  pyproject.toml
challenges/ch-13/stack-queue-brackets/: README.md  pyproject.toml
challenges/ch-15-trees/tree-ch/: README.md  pyproject.toml
challenges/ch-18/tree-fizz-buzz/: README.md  pyproject.toml
challenges/ch-26/: BLOG.md  README.md  insertion_sort.py  pyproject.toml
challenges/ch-26/insertion_sort/: pyproject.toml
challenges/ch-26/insertion_sort/tests/: test_insertion_sort.py
challenges/ch-27/merge_sort/: BLOG.md  README.md  pyproject.toml
challenges/ch-28/quick_sort/: pyproject.toml
challenges/ch-31-hashword/repeated_word/: pyproject.toml
challenges/ch-32/tree-intersection/: pyproject.toml
challenges/ch-33/lift-joint/: README.md  pyproject.toml
challenges/ch-35/graph-imp/: README.md  pyproject.toml
challenges/ch-5/linked-list/: README.md  pyproject.toml
challenges/hash_table/hash-table/: README.md  pyproject.toml
(+34 files in other folders)
